Syndicati - UX & Forum Update
Changelog:

[NEW]

-Shutdown Cinematic
-Loading Cinematic
-Forum Translation per Publication/Comment

[ENHANCED]

-User Experience & Optimization